// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coyote-test 1`] = `
Array [
  "Canis lupus (AF115697) / Canis latrans (EU400578)",
]
`;

exports[`emydura 1`] = `
Array [
  "Emydura subglobosa (KC755184) / Emydura tanybaraga (KC755187)",
]
`;

exports[`emydura-short 1`] = `
Array [
  "Emydura subglobosa (KC755190) / Emydura tanybaraga (KC755187)",
]
`;

exports[`kino 1`] = `
Array [
  "Kinosternon scorpioides (KF301387) / Kinosternon oaxacae (KF301384)",
  "Kinosternon subrubrum (KF301390) / Kinosternon baurii (KF301371)",
  "Kinosternon subrubrum (KF301391) / Kinosternon flavescens (KF301376)",
  "Sternotherus minor (KF301363) / Sternotherus depressus (KF301362)",
]
`;

exports[`plaamyd 1`] = `
Array [
  "Amyda cartilaginea (LM537476) / Palea steindachneri (AY743417)",
  "Amyda cartilaginea (LM537467) / Amyda ornata (LM537478)",
  "Amyda ornata (LM537482) / Amyda cartilaginea (LM537464)",
  "Amyda ornata (LM537490) / Amyda cartilaginea (LM537463)",
  "Amyda cartilaginea (LM537483) / Amyda ornata (LM537462)",
  "Palea steindachneri (AY259552) / Amyda cartilaginea (LM537494)",
]
`;

exports[`smallerlepus 1`] = `
Array [
  "Lepus mandshuricus (HM233014) / Lepus timidus (AB687525)",
  "Lepus timidus (AB687524) / Lepus mandshuricus (HM232991)",
  "Lepus timidus (AB058607) / Lepus mandshuricus (HM233011)",
  "Lepus mandshuricus (DQ793161) / Lepus brachyurus (AB058615)",
]
`;

exports[`trio171sequence 1`] = `
Array [
  "Amyda_cartilaginea (LM537476) / Palea_steindachneri (AY743417)",
  "Amyda_ornata (LM537482) / Amyda_cartilaginea (LM537464)",
  "Amyda_ornata (LM537490) / Amyda_cartilaginea (LM537463)",
  "Amyda_cartilaginea (LM537483) / Amyda_ornata (LM537462)",
  "Palea_steindachneri (AY259552) / Nilssonia_nigricans (AM495232)",
]
`;

exports[`trionychcytb 1`] = `
Array [
  "Amyda_cartilaginea (LM537492) / Palea_steindachneri (AY743417)",
  "Amyda_cartilaginea (LM537464) / Amyda_ornata (LM537490)",
  "Amyda_cartilaginea (LM537463) / Amyda_ornata (LM537482)",
  "Amyda_ornata (LM537462) / Amyda_cartilaginea (LM537483)",
  "Pelodiscus_sinensis (JN860674) / Pelodiscus_maackii (AB904722)",
  "Pelodiscus_sinensis (AB904729) / Pelodiscus_maackii (AB904725)",
  "Palea_steindachneri (AY259552) / Nilssonia_nigricans (AM495237)",
]
`;
